[gd_scene load_steps=7 format=3 uid="uid://c035f2hdgtlwb"]

[ext_resource type="Script" path="res://Scripts/Enemy2Shoot.gd" id="1_lnoer"]
[ext_resource type="Texture2D" uid="uid://dbieufo5jw4ea" path="res://Sprite/Enemy/enemigo 2.png" id="2_n0syi"]
[ext_resource type="Script" path="res://Scenes/EnemyShootKillIt.gd" id="3_ucir2"]
[ext_resource type="AudioStream" uid="uid://caqni48donsg5" path="res://Sound/disparoEnemigo.wav" id="3_y1dx3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08op6"]
size = Vector2(263, 228)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xi2hd"]
radius = 16.0
height = 32.0

[node name="EnemyShoot" type="Area2D"]
script = ExtResource("1_lnoer")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-15, 0)

[node name="Area de vision" type="CollisionShape2D" parent="." groups=["Vision"]]
position = Vector2(-159, -5)
shape = SubResource("RectangleShape2D_08op6")

[node name="SonidoDisparo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y1dx3")

[node name="Area2D" type="Area2D" parent="." node_paths=PackedStringArray("Enemy_scene")]
script = ExtResource("3_ucir2")
Enemy_scene = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(-3, -2)
scale = Vector2(0.71, 0.71)
texture = ExtResource("2_n0syi")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_xi2hd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="Area2D" method="_on_area_shape_entered"]
